[project]
name = "cluedb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Yibo Wei", email = "david_wyb2001@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
  "bluenumbers",
  "geoalchemy2>=0.17.1",
  "google-cloud-storage>=3.1.0",
  "loguru>=0.7.3",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.10.6",
  "shapely>=2.0.7",
  "sqlmodel>=0.0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "testcontainers>=4.9.2",
]

[tool.uv.sources]
bluenumbers = { git = "https://github.com/Microwave-WYB/bluenumbers.git" }
